[gd_scene load_steps=9 format=3 uid="uid://dfa2kqb8fngw2"]

[ext_resource type="Texture2D" uid="uid://t85dwdskjvut" path="res://background/mainphoto1152x648_2.png" id="1_achyv"]
[ext_resource type="Script" path="res://menu/achiev.gd" id="1_e3urd"]
[ext_resource type="Texture2D" uid="uid://ct6j5ra7n3387" path="res://icon/100px_dead1.png" id="2_gkea7"]
[ext_resource type="Texture2D" uid="uid://g0l2oh24uo6v" path="res://icon/100px_crown1.png" id="3_70jlw"]
[ext_resource type="Texture2D" uid="uid://dfgcdcce4utgo" path="res://icon/100px_money1.png" id="4_fv1dg"]
[ext_resource type="Texture2D" uid="uid://cx6eosaodx4v1" path="res://icon/100px_time1.png" id="5_lu8ef"]
[ext_resource type="Theme" uid="uid://dmmwhlddkynf6" path="res://menu/label.tres" id="6_ydmjj"]
[ext_resource type="Theme" uid="uid://cmam3q2g5nam8" path="res://menu/but.tres" id="7_kwuqd"]

[node name="achievements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3urd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_achyv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 76.0
offset_right = 1028.0
offset_bottom = 576.0
color = Color(0.205465, 0.106055, 0.362997, 1)

[node name="enemy_death" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 130.0
offset_top = 159.0
offset_right = 230.0
offset_bottom = 259.0
texture = ExtResource("2_gkea7")

[node name="enemy_death_label" type="Label" parent="ColorRect/enemy_death"]
layout_mode = 0
offset_left = 29.0
offset_top = 111.0
offset_right = 69.0
offset_bottom = 134.0

[node name="boss_death" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 300.0
offset_top = 159.0
offset_right = 400.0
offset_bottom = 259.0
texture = ExtResource("3_70jlw")

[node name="boss_death_label" type="Label" parent="ColorRect/boss_death"]
layout_mode = 0
offset_left = 27.0
offset_top = 102.0
offset_right = 67.0
offset_bottom = 125.0

[node name="money" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 480.0
offset_top = 159.0
offset_right = 580.0
offset_bottom = 259.0
texture = ExtResource("4_fv1dg")

[node name="money_label" type="Label" parent="ColorRect/money"]
layout_mode = 0
offset_left = 34.0
offset_top = 106.0
offset_right = 74.0
offset_bottom = 129.0

[node name="time" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 660.0
offset_top = 157.0
offset_right = 760.0
offset_bottom = 257.0
texture = ExtResource("5_lu8ef")

[node name="time_label" type="Label" parent="ColorRect/time"]
layout_mode = 0
offset_left = 33.0
offset_top = 103.0
offset_right = 73.0
offset_bottom = 126.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 67.0
offset_right = 820.0
offset_bottom = 193.0
theme = ExtResource("6_ydmjj")
text = "Achievements"

[node name="achiv_exit" type="Button" parent="."]
layout_mode = 0
offset_left = 517.0
offset_top = 469.0
offset_right = 614.0
offset_bottom = 557.0
theme = ExtResource("7_kwuqd")
text = "Exit"

[connection signal="pressed" from="achiv_exit" to="." method="_on_achiv_exit_pressed"]
